--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server -w db.json -s /public/ -h 192.168.1.3 -p 3000"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
